--- a/chatbot/assistant/templates/chatbot.html
+++ b/chatbot/assistant/templates/chatbot.html
@@ -329,7 +329,7 @@
 
         try {
             console.log("Sending request...");
-            const response = await fetch("/", {
+            const response = await fetch("/chat/", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/x-www-form-urlencoded",
