--- a/chatbot/teacher/templates/activity_list_teacher.html
+++ b/chatbot/teacher/templates/activity_list_teacher.html
@@ -64,7 +64,7 @@
 
     .floating-button {
         position: fixed;
-        bottom: 20px;
+        bottom: 100px;
         right: 20px;
         /* background-color: #148634; */
         background-color: #165227;
@@ -93,7 +93,16 @@
   
 </div>
 
+
+
 <hr class="slide-in-left"> 
+
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb ms-5 mt-2">
+        
+        <li class="breadcrumb-item active" aria-current="page">Activities</li>
+    </ol>
+</nav>
 
 {% if messages %}
     <div class="container mt-3" >
